* FEA#6739 Show from a payment all related payments which are on the same line
* FEA#6663 Allow to have a generic default failure code in the configuration for rejected paiement which is returned by default if the payment reject code is not found.
* BUG#6657 Remove the "Processing payments" field from payment group views
* FEA#6588 Add tab for the reconciled rejected payments
* OTH#0000 Fix corrupted translation file because of merge
* FEA#6542 Allow to delete payments groups
* FEA#6565 Add the 'Failed' state on account payments groups
* BUG#6345 Regroup payments by party for batch processing
* BUG#6498 Hide the current state button transition on account payment groups
* OTH#0000 Hotfix: Add super on the process payment default_start method
* FEA#6439 Allow to display the sum of selected payments
* FEA#6316 Allow to force the acknowledge on payment groups which are not planned to be acknowledge but in the processing state
* FEA#6316 The acknowledge chain now use the treatment date to retrieve payment groups with a minimal start date which is less of equal.
* FEA#6402 Notification of an event when planifying akwnowledge a payment group
* FEA#6316 Add a batch parameter which allow to force the acknowledge on payment groups which are not planned to be acknowledge but in the processing state
* FEA#6316 The acknowledge chain now use the treatment date to retrieve payment groups with a minimal start date which is less of equal.
* FEA#0000 Add a batch chain for parallelizable payment treatment
* FEA#0000 Automatically add a payment journal if possible in the payment creation wizard
* FEA#0000 Improve Motive display in Create Payment Process

Version 1.12 - 2017-04-28
* FEA#0000 Trigger an event when creating a payment group
* FEA#0000 Add statuses on payment groups
* FEA#0000 Manage order of reject actions
* FEA#0000 Allow to print merged payments when failing
* FEA#0000 Improve performances for payment creation wizard
* FEA#0000 Add payment batches chain
